--- a/static/index.css
+++ b/static/index.css
@@ -15,7 +15,7 @@ body {
 #header h1 {
   margin: 0;
   font-size: 24px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #fff;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -36,7 +36,7 @@ body {
   font-size: 24px;
   cursor:pointer;
   text-transform: uppercase;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.5;
   margin-bottom: 20px;
 }
@@ -83,7 +83,7 @@ a{
   outline: none;
   box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 #footer {
   position: fixed;
   left: 0;
@@ -91,7 +91,7 @@ a{
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: #99ccff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
   width: 100%;
   height:15px;
   background-color: #000;
