--- a/static/index.css
+++ b/static/index.css
@@ -127,3 +127,12 @@ a:hover {
 .fa:hover {
   color: #aaa;
 }
+
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
