--- a/static/index.css
+++ b/static/index.css
@@ -17,6 +17,7 @@ body {
   background-color: #000;
   padding: 20px;
   text-align: center;
+  display: flex;
 }
 
 #header h1 {
@@ -32,6 +33,7 @@ body {
   min-width: 100px;
   max-width: 300px;
   height: auto;
+  align-self: flex-end;
 }
 
 #content {
