--- a/static/index.css
+++ b/static/index.css
@@ -14,10 +14,10 @@ body {
 }
 
 #header {
-  background-color: #000;
-  padding: 20px;
-  text-align: center;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #header h1 {
@@ -29,11 +29,10 @@ body {
 }
 
 #header img {
-  width: 20%;
-  min-width: 100px;
-  max-width: 300px;
+  width: 15%;
+  min-width: 80px;
+  max-width: 200px;
   height: auto;
-  align-self: flex-end;
 }
 
 #content {
