--- a/static/index.css
+++ b/static/index.css
@@ -15,9 +15,10 @@ body {
 
 #header {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 5vh;
+  justify-content: center; 
+  text-align: center; 
 }
 
 #header h1 {
@@ -29,10 +30,11 @@ body {
 }
 
 #header img {
-  width: 10%;
+  width: 15%; 
   min-width: 80px;
   max-width: 200px;
   height: auto;
+  margin-top: 20px; 
 }
 
 #content {
